--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "my-v0-project",
+  "name": "kit-lost-and-found",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint ."
   },
